[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "x_metrics"
version = "0.1.0"
description = "Metrics for evaluating deep learning experiments"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Manan Lalit", email = "manan.lalit@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "numba",
    "scipy",
    "tqdm",
    "zarr",
    "trackeval",
    "data_utils @ git+ssh://git@github.com/lmanan/data_utils.git", # data loading utilities   
]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/lmanan/x_metrics"
Issues = "https://github.com/lmanan/x_metrics/issues"



