[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "x_metrics"
version = "0.1.0"
description = "Suite of metrics"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Manan Lalit", email = "manan.lalit@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
   "traccuracy", 
   "motile",
   "trackeval @ git+https://github.com/JonathonLuiten/TrackEval.git",
   "pycocotools"
]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/lmanan/x_metrics"
Issues = "https://github.com/lmanan/x_metrics/issues"



